solve y aligned problem in select day menu component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -207,16 +207,6 @@ ul {
   right: 0;
 }
 
-/* .page-header::before {
-  background-color: var(--background-primary);
-  content: '';
-  position: absolute;
-  top: -80px;
-  left: 0;
-  width: 100%;
-  height: 210px;
-} */
-
 .section-heaeder::before {
   background: var(--text-primary);
   position: absolute;
@@ -288,9 +278,9 @@ ul {
 .modalBtn{
   box-shadow: var(--background-primary) 4px 4px 0 0,#000 4px 4px 0 1px;
 } 
-   .modalBtn:active {
+   /* .modalBtn:active {
      box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
-   }
+   } */
   
    .modalBtn:not([disabled]):active {
      box-shadow: var(--background-primary) 2px 2px 0 0, rgb(0, 0, 0) 2px 2px 0 1px;
